--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 streamlit
-langchain_core
+langchain_core==0.1.0
 langchain_community
 langchain_openai
 langchain
 python-dotenv
 chromadb
 beautifulsoup4
+pydantic==1.10.0
+openai
